# TBIJ-care-home-visa-sponsor

./: .gitignore  README.md  build.sh  generate_data.sh  lastUpdated.js  package-lock.json  test.sh
care-sponsors-scraper/: CQC-scraper.py  care-homes-archived.csv  get-care-sponsors.py  prep-sponsors-data.py  visa-sponsor-scraper.py
care-sponsors-scraper/data-in/: all-skilled-home-care-sponsors.csv
care-sponsors-scraper/data-in/care-data/: care-homes-archived.csv
care-sponsors-scraper/data-out/: all-skilled-home-care-sponsors.csv  current-skilled-home-care-sponsors.csv  current-skilled-home-care-sponsors_old.csv  missing-sponsors.csv
care-sponsors-scraper/sponsors-lists/csv/: 2020-07-27_Tier_2_5_Register_of_Sponsors-converted-from-pdf.csv  2020-10-29_Tier_2_5_Register_of_Sponsors-converted-from-pdf.csv  (+5 more)
care-sponsors-svelte-app/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.js
care-sponsors-svelte-app/src/: app.pcss
care-sponsors-svelte-app/static/: last_updated.txt  place_merc_lookup.json  sponsors.csv
data-preprocessor/: .gitignore  README.md  envname  pyproject.toml  settings.ini
data-preprocessor/data_preprocessor/: _modidx.py  const.py  create_location_lookup.py
data-preprocessor/data_preprocessor/store/data/: all-skilled-home-care-sponsors.csv
data-preprocessor/data_preprocessor/store/output/: current-skilled-home-care-sponsors-with-loc.csv  lon_lat_lookup.json  place_merc_lookup.json  postcode_lon_lats.json
data-preprocessor/nbs/: 00_create_location_lookup.ipynb  const.ipynb  index.ipynb  nbdev.yml
(+6 files in other folders)
