[tool.poetry]
name = "data-preprocessor"
version = "0.1.0"
description = ""
authors = ["Lukas Kikuchi"]
license = "icense=MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
jupyter = "^1.0.0"
nbdev = "^2.3.13"
redis = "^5.0.4"
geopy = "^2.4.1"
openai = "^1.23.6"
googlemaps = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
